# doc-architect

./: .actrc  .gitignore  .trivyignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOCAL_CI_TESTING.md  README.md  catalog-info.yaml  docker-compose.yml  docs-requirements.txt  mkdocs.yml  mvnw  pom.xml
.github/: codeql-config.yml  dependabot.yml  dependency-check-suppressions.xml
_sokrates/: config.json
adr/: ADR-001-adopt-adr-for-decisions.md  ADR-002-use-c4-model.md  ADR-003-event-driven-integration.md
doc-architect-cli/: pom.xml
doc-architect-cli/src/test/resources/fixtures/python-fastapi/: pyproject.toml
doc-architect-cli/src/test/resources/fixtures/python-fastapi/app/: database.py  main.py  models.py  schemas.py
doc-architect-core/: pom.xml
docs/: .pages  README.md  architecture-overview.md  ci-cd-setup.md  code-quality.md  docker-usage.md  extending.md  fallback-implementation-guide.md  index.md  onboarding-guide.md  real-world-testing.md  testing.md
examples/: README.md  run-all-tests.sh  test-apache-camel.sh  test-dotnet-eshoponcontainers.sh  test-dotnet-orchardcore.sh  test-dotnet-solution.sh  test-dotnet-umbraco.sh  test-eventuate-tram.sh  test-go-gitea.sh  test-go-linkerd2.sh  test-go-mattermost.sh  test-java-druid.sh  test-java-keycloak.sh  test-java-openhab.sh  test-kafka-spring-cloud-stream.sh  test-kafka-streams-dotnet.sh  test-kafka-streams-java.sh  test-kafka-streams-python.sh  test-messaging-validation.sh  test-python-fastapi.sh  test-python-saleor.sh  test-rabbitmq-tutorial.sh  test-ruby-gitlab.sh  test-spring-integration.sh  (+2 more)
(+292 files in other folders)
